Delete measureType method
