# cmd/server/main.go
@@ -43,6 +43,7 @@ func main() {
 
 type ServerInterface interface {
 	AddMeasureType(c echo.Context) error
+	DeleteMeasureType(c echo.Context) error
 	GetMeasureType(c echo.Context) error
 	ListMeasureType(c echo.Context) error
 	UpdateMeasureType(c echo.Context) error
@@ -67,6 +68,7 @@ func Handler(si ServerInterface, router *echo.Echo) {
 	router.GET("/*", echoSwagger.WrapHandler)
 
 	//measureType
+	api.DELETE("/measuretypes/:id", si.DeleteMeasureType)
 	api.GET("/measuretypes", si.ListMeasureType)
 	api.GET("/measuretypes/:id", si.GetMeasureType)
 	api.PATCH("/measuretypes", si.UpdateMeasureType)
